# CFWGen

./: Cargo.toml  README.md  cfwgen-c599212d130b8a71.js  cfwgen-c599212d130b8a71_bg.wasm  index-3e7de270bd39dce2.css  index.html  index.scss
.github/workflows/: deploy.yml
src/: app.rs  endpoint.rs  main.rs  wg_gen.rs
